--- a/deberS6/html/index.html
+++ b/deberS6/html/index.html
@@ -242,7 +242,7 @@
 
                     </label>
                     <br>
-                    <input class="boton" id="BOTON" type="submit" value="Enviar" onclick="mostrar()"/>  
+                    <input class="boton" id="BOTON" type="submit" value="Enviar" required onclick="mostrar()"/>  
                 </section>
                     
             
