--- a/deberS6/html/index.html
+++ b/deberS6/html/index.html
@@ -46,7 +46,7 @@
             <h1>¿Quien soy?</h1>
             </div>  
 
-        <div id="textomain" style="margin-top: 100px">
+        <div class="textomain" id="textomain" >
             <p style="text-align:justify">Soy estudiante de la carrera de ingenieria de software en Unemi,me gusta el arte, la musica,aprender y jugar videojuegos </p>
         </div>  
 
@@ -109,7 +109,7 @@
                <div class="contenidoder2">
                     <p class="tituloizq">2022-2023</p>
                     <div class="izquierda1">
-                        <P class="textoizq">Mis aspiraciones son aprender base de datos,para luego completar mis proyectos en flutter, por otro lado espero poder ya tener un gran conocimiento en desarrollo web para poder hacer mis propios pryectos de manera profesional</P>
+                        <P class="textoizq">Mis aspiraciones son aprender base de datos,para luego completar mis proyectos en flutter, por otro lado espero poder ya tener un gran conocimiento en desarrollo web para poder hacer mis propios proyectos</P>
                     </div>
               </div>
             </div>
