--- a/deberS6/html/index.html
+++ b/deberS6/html/index.html
@@ -244,7 +244,7 @@
                         <br>
                         <span>Email</span>
                         <br>
-                        <input  type="text" id="EMAIL" placeholder="ejemplo: micorreo@hotmail.com" required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z]+?$"/>
+                        <input  type="text" id="EMAIL" placeholder="ejemplo: micorreo@hotmail.com" required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z]+(\.[A-z0-9]+)?$"/>
                     </label>
                     <label for="MENSAJE">
 
